# optiPIC

./: .gitignore  CMakeLists.txt  makefile  optiPlotter.py  perfplot.py  plotter.py  plotter2.py
PIC/: ArrayPrinter.cuh  Main.cu  PIC.vcxproj  PIC.vcxproj.filters  Particle.cu  Particle.cuh  Particles.cuh  Tracer.cu  Tracer.cuh  cfg.cpp  cfg.cuh  debug_efreq.csv  debug_rhopi.csv  dependencies.cuh  kernel_helper.cuh  kernels_3d.cu  particles.xml  pic.cu  pic_utils.cuh  settings.cfg  simplified_kernels.cu  simplified_kernels.cuh  structs.cuh  trace_particles.csv  utils.cu
Poster/: main.aux  main.tex
Report/: Report.aux  abstract.aux  abstract.tex  background.aux  background.tex  conclusion.aux  conclusion.tex  discussion.aux  discussion.tex  frontpage.aux  frontpage.tex  implementation.aux  implementation.tex  introduction.aux  introduction.tex  report.lof  report.tex  report.toc  results.aux  results.tex  testing.aux  testing.tex
Survey Paper/: survey.aux  survey.tex
bu/: PIC.sln  perfplot.py
bu/PIC/: Main.cu  PIC.vcxproj  PIC.vcxproj.filters  Particles.cuh  kernels_3d.cu  solver.cu  utils.cu  x_debug1freq.txt  x_debug2freq.txt
bu/Report/: 0abstract.aux  1introduction.aux  2background.aux  3implementation.aux  3results.aux  4discussion.aux  4results.aux  5conclusion.aux  5discussion.aux  6conclusion.aux  abstract.aux  abstract.tex  background.aux  background.tex  conclusion.aux  conclusion.tex  discussion.aux  discussion.tex  frontpage.aux  (+13 more)
elster_PIC/: Makefile  Makefile_linux  common.c  njord_submit  parts  plotit.sh  simhdf.h  solvers.c  test.trace  wisdom
(+8 files in other folders)
